tests/snapshots/generated_from_inputs__good_core008.snap
---
source: tests/fixtures.rs
description: "// multiple variables of the same type declared \n// and possibly initialized in the same statement\n\nint main() {\n int x, y = 7;\n x = -1234234;\n printInt(x);\n printInt(y);\n return 0 ;\n\n}"
input_file: inputs/good/core008.lat
---
; ModuleID = 'core008'
source_filename = "core008"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 -1234234)
  call void @printInt(i32 7)
  ret i32 0
}

