tests/snapshots/generated_from_inputs__good_core009.snap
---
source: tests/fixtures.rs
description: "// Calling functions which take zero parameters\n\nint main() {\n int x = foo();\n printInt(x);\n return 0 ;\n\n}\n\nint foo() {\n return 10;\n}\n\n"
input_file: inputs/good/core009.lat
---
; ModuleID = 'core009'
source_filename = "core009"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_foo() {
b0:
  ret i32 10
}

define i32 @main() {
b0:
  %latte_user_foo = call i32 @latte_user_foo()
  call void @printInt(i32 %latte_user_foo)
  ret i32 0
}

