tests/snapshots/generated_from_inputs__good_core010.snap
---
source: tests/fixtures.rs
description: "// count function parameters as initialized\n\nint main() {\n  printInt(fac(5));\n  return 0 ;\n}\n\nint fac (int a) {\n  int r;\n  int n;\n  r = 1;\n  n = a;\n  while (n > 0)\n  {\n    r = r * n;\n    n = n - 1;\n  }\n  return r;\n}\n"
input_file: inputs/good/core010.lat
---
; ModuleID = 'core010'
source_filename = "core010"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_fac(i32 %0) {
b0:
  br label %b1

b1:                                               ; preds = %b3, %b0
  %v4 = phi i32 [ %0, %b0 ], [ %v10, %b3 ]
  %v7 = phi i32 [ 1, %b0 ], [ %v8, %b3 ]
  %v6 = icmp sgt i32 %v4, 0
  br i1 %v6, label %b3, label %b2

b2:                                               ; preds = %b1
  ret i32 %v7

b3:                                               ; preds = %b1
  %v8 = mul i32 %v7, %v4
  %v10 = sub i32 %v4, 1
  br label %b1
}

define i32 @main() {
b0:
  %latte_user_fac = call i32 @latte_user_fac(i32 5)
  call void @printInt(i32 %latte_user_fac)
  ret i32 0
}

