tests/snapshots/generated_from_inputs__good_core011.snap
---
source: tests/fixtures.rs
description: "/* Test pushing -1. */\n\nint main() {\n  printInt(-1);\n  return 0 ;\n}"
input_file: inputs/good/core011.lat
---
; ModuleID = 'core011'
source_filename = "core011"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 -1)
  ret i32 0
}

