tests/snapshots/generated_from_inputs__good_core012.snap
---
source: tests/fixtures.rs
description: "/* Test arithmetic and comparisons. */\n\nint main() {\n    int x = 56;\n    int y = -23;\n    printInt(x+y);\n    printInt(x-y);\n    printInt(x*y);\n    printInt(45/2);\n    printInt(78%3);\n    printBool(x-y > x+y);\n    printBool(x/y <= x*y);\n    printString(\"string\"+\" \"+\"concatenation\");\n    return 0 ;\n}\n\nvoid printBool(boolean b) {\n  if (b) {\n    printString(\"true\");\n    return;\n  } else {\n    printString(\"false\");\n    return;\n }\n}"
input_file: inputs/good/core012.lat
---
; ModuleID = 'core012'
source_filename = "core012"

%string = type { i8*, i32 }

@latte.str.0 = private constant [6 x i8] c"string"
@latte.str.1 = private constant [1 x i8] c" "
@latte.str.2 = private constant [13 x i8] c"concatenation"
@latte.str.3 = private constant [5 x i8] c"false"
@latte.str.4 = private constant [4 x i8] c"true"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 33)
  call void @printInt(i32 79)
  call void @printInt(i32 -1288)
  call void @printInt(i32 22)
  call void @printInt(i32 0)
  call void @latte_user_printBool(i1 true)
  call void @latte_user_printBool(i1 false)
  %new_string = call %string* @newString(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @latte.str.0, i32 0, i32 0), i32 6)
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @latte.str.1, i32 0, i32 0), i32 1)
  %new_string2 = call %string* @stringConcat(%string* %new_string, %string* %new_string1)
  %new_string3 = call %string* @newString(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @latte.str.2, i32 0, i32 0), i32 13)
  %new_string4 = call %string* @stringConcat(%string* %new_string2, %string* %new_string3)
  call void @printString(%string* %new_string4)
  ret i32 0
}

define void @latte_user_printBool(i1 %0) {
b0:
  br i1 %0, label %b1, label %b2

b2:                                               ; preds = %b0
  %new_string = call %string* @newString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @latte.str.3, i32 0, i32 0), i32 5)
  call void @printString(%string* %new_string)
  ret void

b1:                                               ; preds = %b0
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.4, i32 0, i32 0), i32 4)
  call void @printString(%string* %new_string1)
  ret void
}

