tests/snapshots/generated_from_inputs__good_core013.snap
---
source: tests/fixtures.rs
description: "/* Test boolean operators. */\n\nint main() {\n  printString(\"&&\");\n  printBool(test(-1) && test(0));\n  printBool(test(-2) && test(1));\n  printBool(test(3) && test(-5));\n  printBool(test(234234) && test(21321));\n  printString(\"||\");\n  printBool(test(-1) || test(0));\n  printBool(test(-2) || test(1));\n  printBool(test(3) || test(-5));\n  printBool(test(234234) || test(21321));\n  printString(\"!\");\n  printBool(true);\n  printBool(false);\n  return 0 ;\n\n}\n\nvoid printBool(boolean b) {\n  if (!b) {\n    printString(\"false\");\n  } else {\n    printString(\"true\");\n }\n return;\n}\n\nboolean test(int i) {\n  printInt(i);\n  return i > 0;\n}"
input_file: inputs/good/core013.lat
---
; ModuleID = 'core013'
source_filename = "core013"

%string = type { i8*, i32 }

@latte.str.0 = private constant [2 x i8] c"&&"
@latte.str.1 = private constant [2 x i8] c"||"
@latte.str.2 = private constant [1 x i8] c"!"
@latte.str.3 = private constant [4 x i8] c"true"
@latte.str.4 = private constant [5 x i8] c"false"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %new_string = call %string* @newString(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @latte.str.0, i32 0, i32 0), i32 2)
  call void @printString(%string* %new_string)
  %latte_user_test = call i1 @latte_user_test(i32 -1)
  br i1 %latte_user_test, label %b1, label %b2

b1:                                               ; preds = %b0
  %latte_user_test1 = call i1 @latte_user_test(i32 0)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v7 = phi i1 [ %latte_user_test, %b0 ], [ %latte_user_test1, %b1 ]
  call void @latte_user_printBool(i1 %v7)
  %latte_user_test2 = call i1 @latte_user_test(i32 -2)
  br i1 %latte_user_test2, label %b3, label %b4

b3:                                               ; preds = %b2
  %latte_user_test3 = call i1 @latte_user_test(i32 1)
  br label %b4

b4:                                               ; preds = %b3, %b2
  %v14 = phi i1 [ %latte_user_test2, %b2 ], [ %latte_user_test3, %b3 ]
  call void @latte_user_printBool(i1 %v14)
  %latte_user_test4 = call i1 @latte_user_test(i32 3)
  br i1 %latte_user_test4, label %b5, label %b6

b5:                                               ; preds = %b4
  %latte_user_test5 = call i1 @latte_user_test(i32 -5)
  br label %b6

b6:                                               ; preds = %b5, %b4
  %v21 = phi i1 [ %latte_user_test4, %b4 ], [ %latte_user_test5, %b5 ]
  call void @latte_user_printBool(i1 %v21)
  %latte_user_test6 = call i1 @latte_user_test(i32 234234)
  br i1 %latte_user_test6, label %b7, label %b8

b7:                                               ; preds = %b6
  %latte_user_test7 = call i1 @latte_user_test(i32 21321)
  br label %b8

b8:                                               ; preds = %b7, %b6
  %v27 = phi i1 [ %latte_user_test6, %b6 ], [ %latte_user_test7, %b7 ]
  call void @latte_user_printBool(i1 %v27)
  %new_string8 = call %string* @newString(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @latte.str.1, i32 0, i32 0), i32 2)
  call void @printString(%string* %new_string8)
  %latte_user_test9 = call i1 @latte_user_test(i32 -1)
  br i1 %latte_user_test9, label %b10, label %b9

b9:                                               ; preds = %b8
  %latte_user_test10 = call i1 @latte_user_test(i32 0)
  br label %b10

b10:                                              ; preds = %b9, %b8
  %v36 = phi i1 [ %latte_user_test9, %b8 ], [ %latte_user_test10, %b9 ]
  call void @latte_user_printBool(i1 %v36)
  %latte_user_test11 = call i1 @latte_user_test(i32 -2)
  br i1 %latte_user_test11, label %b12, label %b11

b11:                                              ; preds = %b10
  %latte_user_test12 = call i1 @latte_user_test(i32 1)
  br label %b12

b12:                                              ; preds = %b11, %b10
  %v43 = phi i1 [ %latte_user_test11, %b10 ], [ %latte_user_test12, %b11 ]
  call void @latte_user_printBool(i1 %v43)
  %latte_user_test13 = call i1 @latte_user_test(i32 3)
  br i1 %latte_user_test13, label %b14, label %b13

b13:                                              ; preds = %b12
  %latte_user_test14 = call i1 @latte_user_test(i32 -5)
  br label %b14

b14:                                              ; preds = %b13, %b12
  %v50 = phi i1 [ %latte_user_test13, %b12 ], [ %latte_user_test14, %b13 ]
  call void @latte_user_printBool(i1 %v50)
  %latte_user_test15 = call i1 @latte_user_test(i32 234234)
  br i1 %latte_user_test15, label %b16, label %b15

b15:                                              ; preds = %b14
  %latte_user_test16 = call i1 @latte_user_test(i32 21321)
  br label %b16

b16:                                              ; preds = %b15, %b14
  %v56 = phi i1 [ %latte_user_test15, %b14 ], [ %latte_user_test16, %b15 ]
  call void @latte_user_printBool(i1 %v56)
  %new_string17 = call %string* @newString(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @latte.str.2, i32 0, i32 0), i32 1)
  call void @printString(%string* %new_string17)
  call void @latte_user_printBool(i1 true)
  call void @latte_user_printBool(i1 false)
  ret i32 0
}

define void @latte_user_printBool(i1 %0) {
b0:
  %v1 = xor i1 %0, true
  br i1 %v1, label %b1, label %b2

b2:                                               ; preds = %b0
  %new_string = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.3, i32 0, i32 0), i32 4)
  call void @printString(%string* %new_string)
  br label %b3

b1:                                               ; preds = %b0
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @latte.str.4, i32 0, i32 0), i32 5)
  call void @printString(%string* %new_string1)
  br label %b3

b3:                                               ; preds = %b1, %b2
  ret void
}

define i1 @latte_user_test(i32 %0) {
b0:
  call void @printInt(i32 %0)
  %v3 = icmp sgt i32 %0, 0
  ret i1 %v3
}

