tests/snapshots/generated_from_inputs__good_core014.snap
---
source: tests/fixtures.rs
description: "/* Fibonacci. */\n\nint main () {\n  int lo,hi,mx ;\n  lo = 1 ;\n  hi = lo ;\n  mx = 5000000 ;\n  printInt(lo) ;\n  while (hi < mx) {\n    printInt(hi) ;\n    hi = lo + hi ;\n    lo = hi - lo ;\n  }\n  return 0 ;\n\n}\n\n"
input_file: inputs/good/core014.lat
---
; ModuleID = 'core014'
source_filename = "core014"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 1)
  br label %b1

b1:                                               ; preds = %b3, %b0
  %v6 = phi i32 [ 1, %b0 ], [ %v11, %b3 ]
  %v10 = phi i32 [ 1, %b0 ], [ %v12, %b3 ]
  %v8 = icmp slt i32 %v6, 5000000
  br i1 %v8, label %b3, label %b2

b2:                                               ; preds = %b1
  ret i32 0

b3:                                               ; preds = %b1
  call void @printInt(i32 %v6)
  %v11 = add i32 %v10, %v6
  %v12 = sub i32 %v11, %v10
  br label %b1
}

