tests/snapshots/generated_from_inputs__good_core015.snap
---
source: tests/fixtures.rs
description: "/* parity of positive integers by recursion */\n\nint main () {\n  printInt(ev(17)) ;\n  return 0 ;\n}\n\nint ev (int y) {\n  if (y > 0)\n    return ev (y-2) ;\n  else\n    if (y < 0)\n      return 0 ;\n    else\n      return 1 ;\n}"
input_file: inputs/good/core015.lat
---
; ModuleID = 'core015'
source_filename = "core015"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_ev(i32 %0) {
b0:
  %v2 = icmp sgt i32 %0, 0
  br i1 %v2, label %b1, label %b2

b2:                                               ; preds = %b0
  %v9 = icmp slt i32 %0, 0
  br i1 %v9, label %b3, label %b4

b4:                                               ; preds = %b2
  ret i32 1

b3:                                               ; preds = %b2
  ret i32 0

b1:                                               ; preds = %b0
  %v5 = sub i32 %0, 2
  %latte_user_ev = call i32 @latte_user_ev(i32 %v5)
  ret i32 %latte_user_ev
}

define i32 @main() {
b0:
  %latte_user_ev = call i32 @latte_user_ev(i32 17)
  call void @printInt(i32 %latte_user_ev)
  ret i32 0
}

