tests/snapshots/generated_from_inputs__good_core017.snap
---
source: tests/fixtures.rs
description: "/* Test boolean operators */\n\nint main () {\n  int x = 4;\n  if (3 <= x && 4 != 2 && true) {\n    printBool(true);\n  } else {\n    printString(\"apa\");\n  }\n\n  printBool(true == true || dontCallMe(1));\n  printBool(4 < -5 && dontCallMe(2));\n\n  printBool(4 == x && true == !false && true);\n\n  printBool(implies(false,false));\n  printBool(implies(false,true));\n  printBool(implies(true,false));\n  printBool(implies(true,true));\n  return 0 ;\n\n}\n\nboolean dontCallMe(int x) {\n  printInt(x);\n  return true;\n}\n\nvoid printBool(boolean b) {\n  if (b) {\n    printString(\"true\");\n  } else {\n    printString(\"false\");\n }\n return;\n}\n\nboolean implies(boolean x, boolean y) {\n  return !x || x == y;\n}\n"
input_file: inputs/good/core017.lat
---
; ModuleID = 'core017'
source_filename = "core017"

%string = type { i8*, i32 }

@latte.str.0 = private constant [3 x i8] c"apa"
@latte.str.1 = private constant [5 x i8] c"false"
@latte.str.2 = private constant [4 x i8] c"true"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i1 @latte_user_dontCallMe(i32 %0) {
b0:
  call void @printInt(i32 %0)
  ret i1 true
}

define i1 @latte_user_implies(i1 %0, i1 %1) {
b0:
  %v2 = xor i1 %0, true
  br i1 %v2, label %b2, label %b1

b1:                                               ; preds = %b0
  %v3 = icmp eq i1 %0, %1
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v4 = phi i1 [ %v2, %b0 ], [ %v3, %b1 ]
  ret i1 %v4
}

define i32 @main() {
b0:
  br i1 true, label %b1, label %b2

b1:                                               ; preds = %b0
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v6 = phi i1 [ true, %b0 ], [ true, %b1 ]
  br i1 %v6, label %b3, label %b4

b3:                                               ; preds = %b2
  br label %b4

b4:                                               ; preds = %b3, %b2
  %v8 = phi i1 [ %v6, %b2 ], [ true, %b3 ]
  br i1 %v8, label %b5, label %b6

b6:                                               ; preds = %b4
  %new_string = call %string* @newString(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @latte.str.0, i32 0, i32 0), i32 3)
  call void @printString(%string* %new_string)
  br label %b7

b5:                                               ; preds = %b4
  call void @latte_user_printBool(i1 true)
  br label %b7

b7:                                               ; preds = %b5, %b6
  br i1 true, label %b9, label %b8

b8:                                               ; preds = %b7
  %latte_user_dontCallMe = call i1 @latte_user_dontCallMe(i32 1)
  br label %b9

b9:                                               ; preds = %b8, %b7
  %v18 = phi i1 [ true, %b7 ], [ %latte_user_dontCallMe, %b8 ]
  call void @latte_user_printBool(i1 %v18)
  br i1 false, label %b10, label %b11

b10:                                              ; preds = %b9
  %latte_user_dontCallMe1 = call i1 @latte_user_dontCallMe(i32 2)
  br label %b11

b11:                                              ; preds = %b10, %b9
  %v26 = phi i1 [ false, %b9 ], [ %latte_user_dontCallMe1, %b10 ]
  call void @latte_user_printBool(i1 %v26)
  br i1 true, label %b12, label %b13

b12:                                              ; preds = %b11
  br label %b13

b13:                                              ; preds = %b12, %b11
  %v39 = phi i1 [ true, %b11 ], [ true, %b12 ]
  br i1 %v39, label %b14, label %b15

b14:                                              ; preds = %b13
  br label %b15

b15:                                              ; preds = %b14, %b13
  %v41 = phi i1 [ %v39, %b13 ], [ true, %b14 ]
  call void @latte_user_printBool(i1 %v41)
  %latte_user_implies = call i1 @latte_user_implies(i1 false, i1 false)
  call void @latte_user_printBool(i1 %latte_user_implies)
  %latte_user_implies2 = call i1 @latte_user_implies(i1 false, i1 true)
  call void @latte_user_printBool(i1 %latte_user_implies2)
  %latte_user_implies3 = call i1 @latte_user_implies(i1 true, i1 false)
  call void @latte_user_printBool(i1 %latte_user_implies3)
  %latte_user_implies4 = call i1 @latte_user_implies(i1 true, i1 true)
  call void @latte_user_printBool(i1 %latte_user_implies4)
  ret i32 0
}

define void @latte_user_printBool(i1 %0) {
b0:
  br i1 %0, label %b1, label %b2

b2:                                               ; preds = %b0
  %new_string = call %string* @newString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @latte.str.1, i32 0, i32 0), i32 5)
  call void @printString(%string* %new_string)
  br label %b3

b1:                                               ; preds = %b0
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.2, i32 0, i32 0), i32 4)
  call void @printString(%string* %new_string1)
  br label %b3

b3:                                               ; preds = %b1, %b2
  ret void
}

